--- a/Remixer.WPF/App.xaml
+++ b/Remixer.WPF/App.xaml
@@ -4,6 +4,10 @@
              xmlns:local="clr-namespace:Remixer.WPF"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
-         
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="Themes/ModernTheme.xaml"/>
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
     </Application.Resources>
 </Application>
